--- a/style.css
+++ b/style.css
@@ -19,7 +19,17 @@ body {
 	margin: 0px;
 	padding: 10px 10px 0px 10px;
 	background: #eee;
+  opacity: 1;
 	border-top: 1px solid #999;
+}
+
+#tooltip_panel {
+  position: fixed;
+  margin: 0px;
+  bottom: 45px;
+  right: 10px;
+  padding: 10px 10px 0px 10px;
+  border: 1px solid #de2d26;
 }
 
 #footer {
@@ -30,7 +40,7 @@ body {
 	padding: 0px;
 	z-index: 10;
 	fill: #666;
-  	font: 8px sans-serif;
+  font: 8px sans-serif;
 }
 
 .column text {
@@ -49,6 +59,7 @@ body {
 	fill: #fff;
 	stroke: #bbb;
 	stroke-width: 1px;
+  cursor: pointer;
 }
 
 .value {
@@ -82,7 +93,7 @@ body {
 }
 
 .year {
-	fill: #b00;
+	fill: #de2d26;
 	font-weight: bold;
 	font-family: Palatino, Times, serif;
 }
@@ -106,7 +117,7 @@ body {
 }
 
 .attribution:hover {
-	fill: #b00;
+	fill: #de2d26;
 	text-decoration: underline;
 }
 
@@ -116,7 +127,7 @@ body {
 }
 
 .artist:hover {
-	fill: #b00;
+	fill: #de2d26;
 	text-decoration: underline;
 }
 
@@ -132,27 +143,21 @@ body {
 }
 
 .album:hover {
-	fill: #b00;
+	fill: #de2d26;
 	text-decoration: underline;
 }
 
 .tooltip {
   position: absolute;	
   text-align: left;	
-  width: 120px;	
-  height: 80px;		
+  width: 190px;	
+  height: 100px;		
   padding: 5px 5px 5px 5px;
   font: 8px sans-serif;	
-  background: #fdd;	
-  border: 0px;					
+  background: #fee0d2;	
+  border: 0px #de2d26;					
   border-radius: 4px;
   z-index: 10;
-}
-
-.tooltip a {
-	text-decoration: none;
-	cursor: pointer;
-	fill: #000;
 }
 
 .vline {
