adjusted style of about panel

--- a/style.css
+++ b/style.css
@@ -43,8 +43,8 @@ body {
   height: 310px;    
   padding: 5px 5px 5px 5px;
   font: 9px sans-serif; 
-  background: #eee;  
-  border: 1px solid #999;          
+  background: #fee0d2;  
+  border: 1px solid #de2d26;          
   border-radius: 4px;
   z-index: 10;
 }
