--- a/2015/css/style.css
+++ b/2015/css/style.css
@@ -141,6 +141,11 @@ label {
 	cursor: default;
 }
 
+.title:hover {
+  fill: #de2d26;
+	text-decoration: underline;
+}
+
 .subtitle {
 	font-size: 8px;
 	cursor: default;
